# llm-gateway

./: .gitignore  LICENSE  README.md  docker-compose.ci.yml  docker-compose.yml
.github/workflows/: ci.yml
clients/dotnet-client/: LlmGateway.sln
clients/dotnet-client/src/LlmGateway.Client/: GatewayClient.cs  LlmGateway.Client.csproj
clients/dotnet-client/src/LlmGateway.Client/Models/: ChatRequest.cs  ChatResponse.cs  EmbedRequest.cs  EmbedResponse.cs
clients/dotnet-client/tests/LlmGateway.Client.Tests/: GatewayClientTests.cs  LlmGateway.Client.Tests.csproj
clients/python-client/: pyproject.toml
clients/python-client/src/llm_gateway/: client.py  models.py
clients/python-client/tests/: test_client.py
clients/react-client/: package-lock.json  package.json  tsconfig.json
clients/react-client/src/: client.ts  index.ts  types.ts
clients/react-client/src/examples/: node_example.ts
clients/react-client/tests/: client.test.ts
examples/: dotnet_example.cs  python_example.py  react_example.tsx
gateway/: .dockerignore  Dockerfile  README.md  pyproject.toml
gateway/src/gateway/: app.py  routes.py  schemas.py
gateway/src/gateway/adapters/: anthropic.py  azure.py  bedrock.py  ollama.py  openai.py
gateway/tests/: conftest.py  test_routes.py
gateway/tests/adapters/: test_anthropic.py  test_azure.py  test_bedrock.py  test_ollama.py  test_openai.py
spec/: openapi.yaml
tests/examples/dotnet-console/: Program.cs  dotnet-console.csproj
